Add reference for finiteness problem
Also, slight change in wording in abstract

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -66,11 +66,23 @@
 % TODO check
 @Article{sunic:conj,
   author =      {Z. Sunic and E. Ventura},
-  title =       {The conjuacy problem in automaton groups is not solvable},
+  title =       {The conjugacy problem in automaton groups is not solvable},
   journal =     {Journal of Algebra},
   year =        2012,
   volume =      364,
   number =    {148--154}
+}
+
+@article{gillibert:finite,
+  author    = {Pierre Gillibert},
+  title     = {The finiteness problem for automaton semigroups is undecidable},
+  journal   = {CoRR},
+  volume    = {abs/1304.2295},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1304.2295},
+  timestamp = {Thu, 02 May 2013 15:54:11 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1304-2295},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 % TODO check this 
