--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -40,7 +40,7 @@
     \maketitle
     
     \begin{abstract}
-        We consider a variety of decision problems in groups and semigroups induced by invertible Mealy machines. Notably, we present proof that the Membership problem in decidable in these semigroups. In addition, we prove undecidability of a Knapsack variant. A discussion of iteration and orbit rationality follows.
+        We consider a variety of decision problems in groups and semigroups induced by invertible Mealy machines. Notably, we present proof that the automorphism membership problem in decidable in these semigroups. In addition, we prove undecidability of a Knapsack variant. A discussion of iteration and orbit rationality follows.
     \end{abstract}
        
     \tableofcontents
@@ -111,7 +111,7 @@
     \end{figure}
 
     \subsection*{Decision Problems}
-    Automaton semigroups exhibit many interesting and nuanced computability properties. While it is an easy result that the \decprob{word problem} is solvable in such semigroups, similar group-theoretic problems such as the \decprob{conjuacy problem} and \decprob{isomorphism problem} have been shown to be undecidable (\cite{sunic:conj} and TODO, respectively).
+    Automaton semigroups exhibit many interesting and nuanced computability properties. While it is an easy result that the \decprob{word problem} is solvable in such semigroups, similar group-theoretic problems such as the \decprob{conjugacy problem} and \decprob{finiteness problem} have been shown to be undecidable (\cite{sunic:conj}, and \cite{gillibert:finite}, respectively).
 
     Various other semigroup theoretic decision problems have recently been considered for small classes of semigroups by Cain in \cite{Cain09:dec_prob}. We consider a subset of his distinguished properties in the automaton semigroup case here.
 
@@ -281,11 +281,9 @@
     \section{Open Questions} 
 
     \begin{itemize}
-    % \item Residuation Fixed point problem
     \item All automaton semigroups are recursively presented. If these presentations are regular, or context-free, does that affect the soluability of these questions?
-    \item Finiteness
-    % \item Having an identity
     \item Having a zero
+    \item Isomorphism problem
     \item Bounded automata, etc
     \end{itemize}
     
