Fix bibliography reference

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 \usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{url}
-\usepackage[nochapters]{../classicthesis} % nochapters
+\usepackage[nochapters]{classicthesis} % nochapters
 % \usepackage[margin=1in]{geometry}
 \usepackage{pgf, tikz}
 \usetikzlibrary{arrows, automata}
@@ -292,5 +292,5 @@
     \addtocontents{toc}{\protect\vspace{\beforebibskip}}
     \addcontentsline{toc}{section}{\refname}    
     \bibliographystyle{plain}
-    \bibliography{../Bibliography}
+    \bibliography{thesis}
 \end{document}
