--- a/thesis.tex
+++ b/thesis.tex
@@ -39,14 +39,14 @@ The word problem is a classic group-theoretic decision problem. Given
 a finitely generated group $G$, and a word $w$ over the generators
 (and their inverses), the word problem asks ``is $w \in G$.'' The word
 problem is known to be undecidable in surprisingly small classes of
-groups - see TODO for background.
+groups - see \cite{Cain09:auto_sg} and \cite{Cain09:dec_prob} for background.
 
 The invertible Mealy machines we consider here give rise to a class of
 semigroups (and sometimes groups) for which the word problem is
 decidable. The computability picture here is rather chanced,
 however. Other important decision problems, among them the conjugacy
 problem, and the isomorphism problem are known to be undecidable. (See
-TODO and TODO for details).
+\cite{sunic:conj} and TODO for details).
 
 We present proof that, for the Abelian case, automorphism membership
 testing is decidable in this class of semigroups.
