Remove beamer styling from figure

--- a/figures/grigorchuk.tex
+++ b/figures/grigorchuk.tex
@@ -6,7 +6,7 @@
 %
 %---------------------------------------------------------------------------
 \documentclass{standalone}
-\usepackage[beamer]{vaucanson-g}
+\usepackage{vaucanson-g}
 
 \FixStateLineDouble{.9}{.8}
 \renewcommand{\TinyScale}{0.40}
